color of img border

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -58,7 +58,7 @@ header img {
   margin-top: 0.5em;
   margin-right: 0.5em;
   float: right;
-  border: 0.5em solid #ffffff;
+  border: 0.5em solid #b6face;
 }
 
 footer {
