--- a/web/css/main.css
+++ b/web/css/main.css
@@ -27,10 +27,12 @@ h2 {
   padding: 0.5em;
 }
 
+ul li {
+  padding: 0.15em;
+}
 li a:hover {
   background-color: #8c041b;
   color: #ffffff;
-  padding: 0.2em;
 }
 
 main {
