--- a/web/css/main.css
+++ b/web/css/main.css
@@ -6,7 +6,7 @@
 body {
   font-family: "Bree Serif", serif;
   font-weight: bold;
-  background-color: #b6face;
+  background-color: #d4faef;
 }
 
 a {
@@ -60,8 +60,8 @@ footer a {
 }
 
 header img {
-  margin-top: 0.5em;
-  margin-right: 0.5em;
+  margin-top: 1em;
+  margin-right: 1em;
   float: right;
   border: 0.5em solid #b6face;
 }
