change to lighter blue

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -16,8 +16,8 @@ a {
 h1 {
   padding: 0.2em, auto;
   font-size: 4em;
-  color: #b6face;
-  border-bottom: 0.1em solid #b6face;
+  color: #ffffff;
+  border-bottom: 0.1em solid #d4faef;
   margin-bottom: 0.2em;
 }
 
