--- a/web/css/main.css
+++ b/web/css/main.css
@@ -22,11 +22,15 @@ h1 {
 }
 
 h2 {
+  display: inline-block;
   font-size: 2em;
   text-align: left;
-  padding: 0.5em;
+  padding-top: 0.5em;
+  border-bottom: 0.2em solid #8c041b;
 }
-
+h3 {
+  font-size: 0.5em;
+}
 ul li {
   padding: 0.15em;
 }
@@ -39,8 +43,10 @@ li a:hover {
   color: #ffffff;
   padding: 0.15em;
 }
-nav ul {
+nav {
   display: inline;
+}
+nav ul {
   list-style-type: none;
 }
 
