--- a/web/css/main.css
+++ b/web/css/main.css
@@ -41,7 +41,6 @@ ul li {
   color: #ffffff;
   padding: 1em;
   border-radius: 20px;
-  display: inline;
 }
 
 #favs li a,
@@ -65,6 +64,7 @@ nav li {
   border-radius: 10px;
   padding: 0.5em;
   font-size: 1.5em;
+  margin: 1em, auto;
   margin-left: 0.15em;
 }
 nav li a {
