--- a/web/css/main.css
+++ b/web/css/main.css
@@ -41,6 +41,8 @@ ul li {
   color: #ffffff;
   padding: 1em;
   border-radius: 20px;
+  display: inline;
+  margin: 0.75em;
 }
 
 #favs li a,
@@ -56,6 +58,7 @@ li a:hover {
 
 nav ul {
   list-style-type: none;
+  margin: 1em, auto;
 }
 
 nav li {
@@ -64,7 +67,7 @@ nav li {
   border-radius: 10px;
   padding: 0.5em;
   font-size: 1.5em;
-  margin: 1em, auto;
+
   margin-left: 0.15em;
 }
 nav li a {
