--- a/web/css/main.css
+++ b/web/css/main.css
@@ -25,7 +25,7 @@ h2 {
   display: inline-block;
   font-size: 2em;
   text-align: left;
-  padding: 0.75em, auto;
+  padding-bottom: 0.35em;
   border-bottom: 0.1em solid #8c041b;
 }
 h3 {
@@ -41,7 +41,7 @@ ul li {
   color: #ffffff;
   padding: 1em;
   border-radius: 20px;
-  display: inline;
+  display: inline-block;
   margin: 0.75em;
 }
 
@@ -58,7 +58,9 @@ li a:hover {
 
 nav ul {
   list-style-type: none;
-  margin: 1em, auto;
+  margin: 1em;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 nav li {
