--- a/web/css/main.css
+++ b/web/css/main.css
@@ -25,7 +25,7 @@ h2 {
   display: inline-block;
   font-size: 2em;
   text-align: left;
-  padding-bottom: 0.35em;
+  padding-bottom: 0.15em;
   border-bottom: 0.1em solid #8c041b;
 }
 h3 {
@@ -56,6 +56,11 @@ li a:hover {
   padding: 0.15em;
 }
 
+nav {
+  margin: 0.5em;
+  margin-left: auto;
+  margin-right: auto;
+}
 nav ul {
   list-style-type: none;
 }
@@ -66,8 +71,7 @@ nav li {
   border-radius: 10px;
   padding: 0.5em;
   font-size: 1.5em;
-  margin: 0.5em;
-  margin-left: auto;
+
   margin-right: 0.15em;
 }
 nav li a {
