--- a/web/css/main.css
+++ b/web/css/main.css
@@ -57,7 +57,8 @@ li a:hover {
 }
 
 nav {
-  margin: 1.5em;
+  margin-top: 2em;
+  margin-bottom: 1em;
   margin-left: auto;
   margin-right: auto;
 }
@@ -78,7 +79,7 @@ nav li a {
   color: #ffffff;
 }
 
-nav li a:hover {
+nav li:hover {
   background-color: #ffffff;
   color: #8c041b;
   padding: 0.15em;
