--- a/web/css/main.css
+++ b/web/css/main.css
@@ -80,7 +80,7 @@ nav li a {
   color: #ffffff;
 }
 nav li a:hover {
-  color: #ffffff;
+  color: #8c041b;
 }
 nav li:hover {
   background-color: #ffffff;
