header text align and header div size changes

--- a/web/shoppingCart/css/main.css
+++ b/web/shoppingCart/css/main.css
@@ -19,7 +19,12 @@ header {
 }
 #header {
   display: flex;
+  width: 60%;
+  margin: 0 auto;
 }
 #logo {
   float: left;
+}
+#header h1 {
+  vertical-align: bottom;
 }
