--- a/web/shoppingCart/css/main.css
+++ b/web/shoppingCart/css/main.css
@@ -35,13 +35,13 @@ header {
 }
 #shirtDiv {
   display: grid;
-  grid-template-rows: 1fr 6fr;
+  grid-template-rows: 1fr 3fr 3fr;
   grid-template-columns: repeat(3, 1fr);
 }
 
 #onesieDiv {
   display: grid;
-  grid-template-rows: 1fr 6fr;
+  grid-template-rows: 1fr 3fr 3fr;
   grid-template-columns: repeat(2, 1fr);
 }
 
