--- a/web/shoppingCart/css/main.css
+++ b/web/shoppingCart/css/main.css
@@ -42,7 +42,7 @@ header {
 #onesieDiv {
   display: grid;
   grid-template-rows: 1fr 3fr 3fr;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(2, 304.6px);
 }
 
 #shirtTitle {
@@ -55,6 +55,7 @@ header {
 main section img {
   width: 200px;
   height: 200px;
+  margin: 0.25em;
 }
 main section {
   display: block;
