--- a/web/shoppingCart/css/main.css
+++ b/web/shoppingCart/css/main.css
@@ -35,14 +35,16 @@ header {
 }
 #shirtDiv {
   display: grid;
-  grid-template-rows: 1fr 3fr 3fr;
+  grid-template-rows: 0.5fr 3fr 3fr;
   grid-template-columns: repeat(3, 1fr);
+  margin: 1.5em auto;
 }
 
 #onesieDiv {
   display: grid;
-  grid-template-rows: 1fr 3fr 3fr;
+  grid-template-rows: 0.5fr 3fr 3fr;
   grid-template-columns: repeat(2, 304.6px);
+  margin: auto;
 }
 
 #shirtTitle {
