--- a/web/HoweCookbook/CSS/main.css
+++ b/web/HoweCookbook/CSS/main.css
@@ -1,6 +1,9 @@
 .categorybtns {
-  color: black;
+  color: lightblue;
   font-size: 1em;
-  padding: 1em;
+  padding: 0.5em;
+  margin: 0.5em;
+  background-color: black;
   text-decoration: none;
+  font-weight: bolder;
 }
