--- a/web/HoweCookbook/CSS/main.css
+++ b/web/HoweCookbook/CSS/main.css
@@ -1,3 +1,13 @@
+* {
+  margin: 0;
+  text-align: center;
+  padding: 0;
+}
+
+html {
+  background-color: #a31621;
+  color: #ced3dc;
+}
 .categorybtns {
   color: lightblue;
   font-size: 1em;
