--- a/web/HoweCookbook/CSS/main.css
+++ b/web/HoweCookbook/CSS/main.css
@@ -9,17 +9,16 @@ body {
   color: #ced3dc;
 }
 header img {
-  position: relative;
+  margin: auto;
 }
 
 #howeHeader {
-  position: absolute;
-  justify-self: center;
+  font-size: 2em;
 }
 
 #mainBTNdiv {
   width: 75%;
-  margin: auto;
+  margin: 2em, auto;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(3, 4em);
