--- a/web/HoweCookbook/CSS/main.css
+++ b/web/HoweCookbook/CSS/main.css
@@ -14,25 +14,28 @@ header img {
 
 #howeHeader {
   font-size: 2em;
+  padding: 1em;
+  background-color: #4e8098;
+  color: #fcf7f8;
+  display: inline-block;
 }
 
 #mainBTNdiv {
   width: 75%;
-  margin: 2em, auto;
+  margin: auto;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(3, 4em);
-  column-gap: 0.5em;
-  row-gap: 1em;
+  column-gap: 1.5em;
+  row-gap: 1.5em;
 }
 
 .categorybtns {
   color: #a31621;
   font-size: 2em;
   padding: 1em;
-
   background-color: #fcf7f8;
   text-decoration: none;
   font-weight: bolder;
-  display: block;
+  border-radius: 15px;
 }
