--- a/web/HoweCookbook/CSS/main.css
+++ b/web/HoweCookbook/CSS/main.css
@@ -11,6 +11,7 @@ body {
 
 #content {
   width: 80%;
+  margin: auto;
 }
 
 header img {
@@ -18,20 +19,22 @@ header img {
 }
 
 #howeHeader {
-  font-size: 4em;
+  font-size: 2.75em;
   padding: 1em;
   background-color: #4e8098;
   color: #fcf7f8;
   display: inline-block;
-  margin: 0.5em, auto, 1.5em, auto;
+  margin: 1.5em auto;
+  margin-top: 0.5em;
+  border-radius: 15px;
 }
 
 #mainBTNdiv {
-  width: 75%;
+  width: 80%;
   margin: auto;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(3, 4em);
+  grid-template-rows: repeat(3, 1fr);
   column-gap: 1.5em;
   row-gap: 1.5em;
 }
