--- a/web/HoweCookbook/CSS/main.css
+++ b/web/HoweCookbook/CSS/main.css
@@ -33,7 +33,6 @@ main {
   margin: auto;
 }
 #mainBTNdiv {
-  width: 80%;
   margin: auto;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -53,5 +52,5 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  box-shadow: 0.5em, 0.5em, 0.5em #4e8098;
+  box-shadow: 0.5em 0.5em 0.5em #4e8098;
 }
