--- a/web/HoweCookbook/CSS/main.css
+++ b/web/HoweCookbook/CSS/main.css
@@ -62,17 +62,22 @@ main {
 }
 
 #pageTitle {
-  font-size: 1.5em;
+  font-size: 2.5em;
   color: #fcf7f8;
   text-decoration: underline #4e8098;
+  margin-bottom: 1em;
 }
 
 #recipesOL {
   background-color: #90c2e7;
   color: #a31621;
+  font-weight: bolder;
   margin: auto;
   padding: 1em;
   border-radius: 1em;
+  text-align: left;
+  width: 40%;
+  padding: 0.5em;
 }
 
 #recipesOL li {
