--- a/web/HoweCookbook/CSS/main.css
+++ b/web/HoweCookbook/CSS/main.css
@@ -64,7 +64,8 @@ main {
 #pageTitle {
   font-size: 2.5em;
   color: #fcf7f8;
-  border-bottom: 0.25em solid#4e8098;
+  padding-bottom: 0.15em;
+  border-bottom: 0.1em solid#4e8098;
   margin-bottom: 1em;
   display: inline-block;
 }
@@ -76,7 +77,7 @@ main {
   margin: auto;
   padding: 1em;
   border-radius: 1em;
-  width: 40%;
+  width: 50;
   padding: 0.5em;
   padding-left: 1.5em;
 }
@@ -85,4 +86,5 @@ main {
   font-size: 2em;
   padding: 0.5em;
   text-align: left;
+  margin: auto;
 }
