--- a/web/HoweCookbook/CSS/main.css
+++ b/web/HoweCookbook/CSS/main.css
@@ -64,7 +64,7 @@ main {
 #pageTitle {
   font-size: 2.5em;
   color: #fcf7f8;
-  padding-bottom: 0.15em;
+  padding-bottom: 0.1em;
   border-bottom: 0.1em solid#4e8098;
   margin-bottom: 1em;
   display: inline-block;
@@ -77,14 +77,14 @@ main {
   margin: auto;
   padding: 1em;
   border-radius: 1em;
-  width: 50;
+  width: 50%;
   padding: 0.5em;
   padding-left: 1.5em;
+  text-align: center;
 }
 
 #recipesOL li {
   font-size: 2em;
   padding: 0.5em;
   text-align: left;
-  margin: auto;
 }
