--- a/web/HoweCookbook/CSS/main.css
+++ b/web/HoweCookbook/CSS/main.css
@@ -92,11 +92,12 @@ main {
   padding: 0.5em;
   padding-left: 1.5em;
   text-align: center;
-  text-decoration: none;
 }
 
 #recipesOL li {
   font-size: 2em;
-  /*padding: 0.5em;*/
-  text-align: left;
+  /*padding: 0.5em;
+  text-align: left;*/
+  text-decoration: none;
+  color: #a31621;
 }
