--- a/web/HoweCookbook/CSS/main.css
+++ b/web/HoweCookbook/CSS/main.css
@@ -98,6 +98,9 @@ main {
   font-size: 2em;
   /*padding: 0.5em;
   text-align: left;*/
-  text-decoration: none;
+
   color: #a31621;
+}
+#recipesOL li a {
+  text-decoration: none;
 }
