--- a/web/HoweCookbook/CSS/main.css
+++ b/web/HoweCookbook/CSS/main.css
@@ -92,6 +92,7 @@ main {
   padding: 0.5em;
   padding-left: 1.5em;
   text-align: center;
+  margin-bottom: 4em;
 }
 
 #recipesOL li {
@@ -101,6 +102,6 @@ main {
 
   color: #a31621;
 }
-#recipesOL li a {
+#recipesOL li a:link {
   text-decoration: none;
 }
