--- a/web/HoweCookbook/CSS/main.css
+++ b/web/HoweCookbook/CSS/main.css
@@ -76,7 +76,7 @@ main {
   font-size: 2.5em;
   color: #fcf7f8;
   padding-bottom: 0.07em;
-  border-bottom: 0.1em solid#4e8098;
+  text-decoration: 0.1em solid #4e8098;
   margin-bottom: 1em;
   display: inline-block;
 }
