--- a/web/HoweCookbook/CSS/main.css
+++ b/web/HoweCookbook/CSS/main.css
@@ -76,7 +76,7 @@ main {
   font-size: 2.5em;
   color: #fcf7f8;
   padding-bottom: 0.07em;
-  text-decoration: 0.1em solid #4e8098;
+  text-decoration: #4e8098;
   margin-bottom: 1em;
   display: inline-block;
 }
@@ -98,10 +98,11 @@ main {
 
 #recipesOL li {
   font-size: 2em;
-  /*padding: 0.5em;
-  text-align: left;*/
+  padding: 0.5em;
+  text-align: left;
   text-decoration: none;
   color: #a31621;
+  display: inline-block;
 }
 #recipesOL a:link {
   text-decoration: none;
