--- a/web/HoweCookbook/CSS/main.css
+++ b/web/HoweCookbook/CSS/main.css
@@ -76,8 +76,8 @@ main {
   font-size: 2.5em;
   color: #fcf7f8;
   padding-bottom: 0.07em;
-  text-decoration: #4e8098;
-  margin-bottom: 1em;
+  text-decoration: underline #4e8098;
+  margin-bottom: 0.5em;
   display: inline-block;
 }
 
@@ -94,6 +94,7 @@ main {
   text-align: center;
   margin-bottom: 4em;
   text-decoration: none;
+  list-style: inside;
 }
 
 #recipesOL li {
@@ -102,8 +103,19 @@ main {
   text-align: left;
   text-decoration: none;
   color: #a31621;
-  display: inline-block;
 }
 #recipesOL a:link {
   text-decoration: none;
+}
+
+#ingred,
+#instruct {
+  font-size: 1.5em;
+  margin: 0.25em;
+}
+#ingred {
+  background-color: #4e8098;
+  color: #fcf7f8;
+  padding: 0.5em;
+  border-radius: 20px;
 }
