--- a/web/HoweCookbook/CSS/main.css
+++ b/web/HoweCookbook/CSS/main.css
@@ -51,7 +51,6 @@ main {
   grid-template-rows: repeat(3, 1fr);
   column-gap: 1.5em;
   row-gap: 1.5em;
-  margin-bottom: 4em;
 }
 
 .categorybtns {
@@ -77,7 +76,7 @@ main {
   color: #fcf7f8;
   padding-bottom: 0.07em;
   text-decoration: underline #4e8098;
-  margin-bottom: 0.5em;
+  margin-bottom: 0.25em;
   display: inline-block;
 }
 
@@ -92,7 +91,6 @@ main {
   padding: 0.5em;
   padding-left: 1.5em;
   text-align: center;
-  margin-bottom: 4em;
   text-decoration: none;
   list-style: inside;
 }
@@ -104,6 +102,10 @@ main {
   text-decoration: none;
   color: #a31621;
 }
+#recipesOL li:hover {
+  text-shadow: 0.2em 0.2em 0.4em #4e8098;
+}
+
 #recipesOL a:link {
   text-decoration: none;
 }
@@ -118,4 +120,8 @@ main {
   color: #fcf7f8;
   padding: 0.5em;
   border-radius: 20px;
+  font-weight: lighter;
+}
+footer {
+  margin-top: 4em;
 }
