--- a/web/HoweCookbook/CSS/main.css
+++ b/web/HoweCookbook/CSS/main.css
@@ -103,7 +103,7 @@ main {
   color: #a31621;
 }
 #recipesOL li:hover {
-  text-shadow: 0.2em 0.2em 0.4em #4e8098;
+  text-shadow: 0.4em 0.4em 0.4em #4e8098;
 }
 
 #recipesOL a:link {
@@ -121,6 +121,7 @@ main {
   padding: 0.5em;
   border-radius: 20px;
   font-weight: lighter;
+  margin: 0.4em;
 }
 footer {
   margin-top: 4em;
