--- a/web/HoweCookbook/CSS/main.css
+++ b/web/HoweCookbook/CSS/main.css
@@ -119,14 +119,15 @@ main {
   width: 60%;
   background-color: #4e8098;
   color: #fcf7f8;
-  padding: 0.5em;
+  padding: 0.75em;
   border-radius: 20px;
   font-weight: lighter;
-  margin: 0.4em;
+  margin: 0.4em auto;
   list-style-type: none;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   column-gap: 1em;
+  text-align: left;
 }
 footer {
   margin-top: 4em;
