--- a/web/HoweCookbook/CSS/main.css
+++ b/web/HoweCookbook/CSS/main.css
@@ -127,8 +127,9 @@ main {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   column-gap: 1em;
-  text-align: left;
+  justify-items: left;
 }
+
 footer {
   margin-top: 4em;
   padding-bottom: 0.5em;
