--- a/web/HoweCookbook/CSS/main.css
+++ b/web/HoweCookbook/CSS/main.css
@@ -116,7 +116,7 @@ main {
   margin: 0.25em;
 }
 #ingred {
-  width: 60%;
+  width: 75%;
   background-color: #4e8098;
   color: #fcf7f8;
   padding: 0.75em;
@@ -128,6 +128,10 @@ main {
   grid-template-columns: repeat(2, 1fr);
   column-gap: 1em;
   justify-items: left;
+}
+
+#ingred li {
+  text-align: left;
 }
 
 footer {
