--- a/web/HoweCookbook/CSS/main.css
+++ b/web/HoweCookbook/CSS/main.css
@@ -157,22 +157,29 @@ footer {
   background-color: #ced3dc;
 }
 #recipeform {
+  width: 75%;
   display: grid;
   grid-template-rows: 1fr 1fr 1fr 2fr 1fr;
+  grid-template-columns: 1fr;
   row-gap: 0.5em;
 }
 .nameGrid {
   grid-row: 1;
+  grid-column: 1;
 }
 .catGrid {
   grid-row: 2;
+  grid-column: 1;
 }
 .ingGrid {
   grid-row: 3;
+  grid-column: 1;
 }
 .instGrid {
   grid-row: 4;
+  grid-column: 1;
 }
 .subGrid {
   grid-row: 5;
+  grid-column: 1;
 }
