--- a/web/HoweCookbook/CSS/main.css
+++ b/web/HoweCookbook/CSS/main.css
@@ -162,6 +162,7 @@ footer {
   grid-template-rows: 1fr 1fr 1fr 2fr 1fr;
   grid-template-columns: 1fr;
   row-gap: 0.5em;
+  margin: auto;
 }
 .nameGrid {
   grid-row: 1;
@@ -177,9 +178,5 @@ footer {
 }
 .instGrid {
   grid-row: 4;
-  grid-column: 1;
-}
-.subGrid {
-  grid-row: 5;
   grid-column: 1;
 }
