--- a/web/HoweCookbook/CSS/main.css
+++ b/web/HoweCookbook/CSS/main.css
@@ -184,19 +184,8 @@ footer {
   padding-right: 0.5em;
 }
 
-.nameGrid input {
-  text-align: left;
-}
-.catGrid input {
-  text-align: left;
-}
-.ingGrid input {
-  text-align: left;
-}
-.instGrid input {
-  text-align: left;
-}
-
+#formcontent input,
 #formcontent textarea {
   margin: 0;
+  text-align: left;
 }
